--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <script src="./index.js"></script>
 </head>
 <body>
+    <header>
+        <nav>
+    
+        </nav>
+    </header>
     <h1>
-        Hello world
+        Hello world!
     </h1>
 </body>
 </html>
