--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./index.js"></script>
+    <link rel="stylesheet" type="text/css" href="./scss/main.css"/>
 </head>
 <body>
     <header>
         <nav>
-    
+            
         </nav>
     </header>
+    <section id="image-container">
+        <img id="main-img" src="./assets/Rick-and-Morty-sunglasses-1344905-wallhere.com.jpg" alt="img-rick-and-morty"/>
+    </section>
     <h1>
         Hello world!
     </h1>
