--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <script src="./index.js"></script>
     <link rel="stylesheet" type="text/css" href="./scss/main.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Poppins:wght@100;200;300;400;500;600;700;800&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -16,8 +19,6 @@
     <section id="image-container">
         <img id="main-img" src="./assets/Rick-and-Morty-sunglasses-1344905-wallhere.com.jpg" alt="img-rick-and-morty"/>
     </section>
-    <h1>
-        Hello world!
-    </h1>
+    <h1>Characters</h1>
 </body>
 </html>
