--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <body>
     <header>
         <nav>
-            
+            <img src="./assets/58f37720a4fa116215a9240f.png" />
+            <div>
+                <span>Docs</span>
+                <span>About</span>
+                <span>Help</span>
+            </div>
         </nav>
     </header>
     <section id="image-container">
