--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
         <img id="main-img" src="./assets/Rick-and-Morty-sunglasses-1344905-wallhere.com.jpg" alt="img-rick-and-morty"/>
     </section>
     <h1>Characters</h1>
+    <section id="character-list">
+    </section>
 </body>
 </html>
