add truncated location

--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
     <h1>Characters</h1>
     <section id="character-list">
     </section>
+    <button id="load-more">
+        Load more
+    </button>
 </body>
 </html>
